# ai-agent-mcp-test

./: README.md  bailian_qwq.py  main.py  ollama.py  pyproject.toml
app/bailian/: bailian.py  bailian_prompt.py  bailian_qwq.py  bailian_tools.py  common.py
